--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
   "java.compile.nullAnalysis.mode": "automatic",
-  "java.home": "C:\\Users\\Public\\wpilib\\2023\\jdk"
+
+  // TODO: Remove this from git tracking
 }
