--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2023.4.3"
+    id("com.diffplug.spotless") version "6.22.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -96,6 +97,13 @@ jar {
 deployArtifact.jarTask = jar
 wpi.java.configureExecutableTasks(jar)
 wpi.java.configureTestTasks(test)
+
+spotless {
+  java {
+    googleJavaFormat()
+  }
+}
+
 
 // Configure string concat to always inline compile
 tasks.withType(JavaCompile) {
