do not enforce spotless check

--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ wpi.java.configureExecutableTasks(jar)
 wpi.java.configureTestTasks(test)
 
 spotless {
+    enforceCheck = false
   java {
     googleJavaFormat()
   }
